@@ -35,5 +35,6 @@
 \section{Changes in version 1.1.5}{
   \itemize{
     \item duplicateDiscordance has an option to compute correlation by SNP.
+    \item Added scan.exclude argument to plinkCheck.
   }
 }
